--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* CSS Reset */
 body,
 h1,
 h2,
@@ -20,6 +21,7 @@ ul {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 img {
@@ -29,4 +31,29 @@ img {
 
 * {
   box-sizing: border-box;
+}
+
+/* Superinfo */
+
+.superinfo-bg {
+  background-color: #122ab2;
+  color: white;
+}
+
+.superinfo {
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+.superinfo p,
+.superinfo a {
+  margin: 0 10px 10px 10px;
+}
+
+.superinfo a {
+  color: white;
 }
